Fixed exhibition page

--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -54,13 +54,13 @@
               </div>
               <!--div class="help-block with-errors">Whole Number</div-->                          
               </div>
-              <div class="col-sm-6">
+              <!-- <div class="col-sm-6">
               <label>Gallery Name</label>
               <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
                 <input name="gallery_name" id="gallery_name" class="form-control" value="{$scope.profile.gallery_name}" type="text"  />
               </div>
-              </div>
+              </div> -->
             </div>
             
             <div class="row mt20">
@@ -113,7 +113,7 @@
               </div>
             </div> 
 
-            {$days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}
+            <!-- {$days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}
             {$working_hour = json_decode($profile.working_hours, True)}
             <div class="row mb20">
               <div class="col-sm-12">
@@ -221,7 +221,7 @@
                   </tr>
                 </table>
               </div>
-            </div>
+            </div> -->
                                    
             <input type="submit" class="btn btn-success" value="Save">            
           </form>
