--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -14,7 +14,7 @@
 
                       <div class="form-group">
                         <label>About Title</label>
-                        <input name="about_title" id="about_title" class="form-control" value="" type="text" style= "width:500px" /> 
+                        <input name="title" id="title" class="form-control" value="" type="text" style= "width:500px" /> 
                       </div>
 
                       <div class="form-group">
