--- a/pages/components/_user-profile-edit-settings.html
+++ b/pages/components/_user-profile-edit-settings.html
@@ -48,7 +48,7 @@
               <div class="col-sm-6">
               <label>Date of birth</label>
               <div class="input-group">
-                <input type="text" id="date_of_birth" value="{$scope.profile.date_of_birth}" class="form-control datepicker" name="date_of_birth" placeholder="Date of birth" >
+                <input type="text" id="date_of_birth" value="{$scope.profile.date_of_birth}" class="form-control datepicker" data-date="{$scope.profile.date_of_birth}" name="date_of_birth" placeholder="Date of birth">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
               </div>
               <!--div class="help-block with-errors">Whole Number</div-->                          
@@ -123,116 +123,6 @@
                 </div>
               </div>
             </div> 
-
-            <!-- {$days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}
-            {$working_hour = json_decode($profile.working_hours, True)}
-            <div class="row mb20">
-              <div class="col-sm-12">
-                <label for="Time">Opening Times</label>
-                <table cellspacing="20">
-                  <tr style="height: 15px;"> 
-                  {if ($working_hour)}
-                    {for $i=0 to 6}
-                      {$time = explode('-', $working_hour[{$days[$i]}])}
-                      {$holiday = 0}
-                      {if (($time[0] =='0:00') && ($time[1] =='0:00'))}
-                        {$holiday = 1}
-                      {/if}
-                      <tr>
-                        <td style= "width:200px">
-                          <label for="days">{$days[$i]}</label>
-                        </td>          
-                          <td style= "width:200px">
-                            <div class="input-group" style= "width:150px">
-                              <input type="text" id ="open_time" name="opening_time[{$days[$i]}]" class="form-control input-small timepicker"  value="{$time[0]|date_format:'H:i'}"  data-time-format="H:i">
-                              <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-                            </div>
-                          </td>
-                          <td style= "width:200px">
-                            <div class="input-group" style= "width:150px">
-                              <input type="text" id ="close_time" name="closing_time[{$days[$i]}]" class="form-control input-small timepicker" value="{$time[1]|date_format:'H:i'}" data-default="00:00" data-time-format="H:i">
-                              <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-                            </div>
-                          </td>
-                          <td>
-                            <input type="checkbox" id="holiday" {if ($holiday == '1')}checked{/if} class="form-control" name="holiday[{$days[$i]}]" value="1" style= "width:20px"> 
-                          </td> 
-                          <td style= "width:200px">Closed</td> 
-                      </tr>
-                      
-                    {/for}
-                  {else}
-                    {$i = 0}
-                    {foreach from=$days  item=$day}
-                      <tr>
-                        <td style= "width:200px">
-                          <label for="days">{$day}</label>
-                        </td>          
-                          <td style= "width:200px">
-                            <div class="input-group" style= "width:150px">
-                              <input type="text" id ="open_time" name="opening_time[{$days[$i]}]" class="form-control input-small timepicker"  value="{$time[0]|default:'00:00'}"  data-time-format="H:i">
-                              <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-                            </div>
-                          </td>
-                          <td style= "width:200px">
-                            <div class="input-group" style= "width:150px">
-                              <input type="text" id ="close_time" name="closing_time[{$days[$i]}]" class="form-control input-small timepicker" value="{$time[1]|default:'00:00'}"  data-time-format="H:i">
-                              <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-                            </div>
-                          </td>
-                          <td>
-                            <input type="checkbox" id="holiday" {if ($holiday == '1')}checked{/if} class="form-control" name="holiday[{$days[$i]}]" value="1" style= "width:20px" checked>
-                          </td> 
-                          <td style= "width:200px">Closed</td> 
-                      </tr>
-                      {$i = $i + 1}
-                    {/foreach}
-                  {/if}
-                  <tr style="height: 15px;"/>
-                </table>           
-              </div> 
-            </div> 
-
-            <div class="row mb20">
-              <div class="col-sm-12">
-                <label for="title">Social Media Profiles</label>
-                <table cellspacing="20"> 
-                  <tr style="height: 15px;"/>
-                  <tr>
-                    <td style= "width:200px">
-                      <label for="Instagram">Instagram</label>
-                    </td>
-                    <td style= "width:500px">
-                      <div class="input-group" style= "width:300px">
-                        <input name="instagram" id="instagram" class="form-control" value="{$scope.profile.instagram}" type="text" /> 
-                      </div>
-                    </td>
-                  </tr>
-                  <tr style="height: 15px;"/>
-                  <tr>
-                    <td style= "width:200px">
-                      <label for="Facebook">Facebook</label>
-                    </td>
-                    <td style= "width:500px">
-                      <div class="input-group" style= "width:300px">
-                        <input name="facebook" id="facebook" class="form-control" value="{$scope.profile.facebook}" type="text" />
-                      </div>
-                    </td>
-                  </tr>
-                  <tr style="height: 15px;"/>
-                  <tr>
-                    <td style= "width:200px">
-                      <label for="Twitter">Twitter</label>
-                    </td>
-                    <td style= "width:500px">
-                      <div class="input-group" style= "width:300px">
-                        <input name="twitter" id="twitter" class="form-control" value="{$scope.profile.twitter}" type="text" />
-                      </div>
-                    </td>
-                  </tr>
-                </table>
-              </div>
-            </div> -->
                                    
             <input type="submit" class="btn btn-success" value="Save">            
           </form>
