--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -3,8 +3,8 @@
                   
                     <form id="user_overview_form" class="ajax-submit"  data-handler="save" data-toggle="validator">
                       <input type="hidden" name="obj_type" value="user_profile" />
-                      <input type="hidden" name="id"  value="{$scope.user.profile_id}" />
-                      <input type="hidden" name="user_id" value="{$scope.user.user_id}" />
+                      <input type="hidden" name="id"  value="{$profile.profile_id}" />
+                      <input type="hidden" name="user_id" value="{$profile.user_id}" />
                       <input type="hidden" name="site_id" value="{$site.id}" />
 
                       <label>Logo Image</label>
