--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -14,12 +14,12 @@
 
                       <div class="form-group">
                         <label>About Title</label>
-                        <input name="title" id="title" class="form-control" value="" type="text" style= "width:500px" /> 
+                        <input name="title" id="title" class="form-control" value="{$scope.profile.title}" type="text" style= "width:500px" /> 
                       </div>
 
                       <div class="form-group">
                         <label>About</label>
-                        <textarea name="description" class="summernote form-control" placeholder="Please describe yourself and your interests.">{$scope.profile.description}</textarea>
+                        <textarea name="bio_description" class="summernote form-control" placeholder="Please describe yourself and your interests.">{$scope.profile.bio_description}</textarea>
                       </div>
 
                       {if ($site.golf_site)}
