--- a/pages/components/_user-profile-edit-overview.html
+++ b/pages/components/_user-profile-edit-overview.html
@@ -8,9 +8,17 @@
                       <input type="hidden" name="site_id" value="{$site.id}" />
 
                       <label>Logo Image</label>
-                      {"user_profile"|object_uploader:$profile.profile_id:"photo":["resize" => 1]}
-                      
-                      {* $scope.uploader *}
+                      <div class="custom_button_cover">
+                        <div class="commonin_row">
+                          {"user_profile"|object_uploader:$profile.profile_id:"photo":["resize" => 1, "cloud" => 1, "view" => "list", "allow_multiple" => 0]}
+                          {* $scope.uploader *}
+
+                        </div>
+                        <div class="custom_button_float"> 
+                          <span>OR &nbsp &nbsp</span>
+                          <a href="/backend/vaults?add_to_logo={$profile.id}&amp;_pv=1" class="btn btn-success ajax-loader" data-target="#subview-container"><i class="fa fa-plus-square"></i> Media Drive</a>
+                        </div>
+                      </div>
 
                       <div class="form-group">
                         <label>About Title</label>
@@ -43,7 +51,6 @@
                       <div class="gap gap-small"></div>
                       
                     </form>
-                    
 
                                    
                     <!--div id="map-canvas" style="width:100%; height:400px;"></div-->
